# Reserva-Restaurante

./: .gitignore  CONTRIBUTING.md  README.md  app.py  pyproject.toml
.github/: CODEOWNERS  labels.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: auto-issue-status.yml  setup-repo.yml
models/: restaurant_model.py  user_model.py
services/: crud_operations.py  mongo_service.py
utils/: utilidades.py  validators.py
views/: login_view.py  main_view.py  register_view.py  restaurant_view.py
